<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:padding="10dp"
    tools:context=".LoginActivity">
    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
        android:inputType="phone" />
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_shape_capsule"
        android:padding="20dp"
        android:text="@string/text_sign_up"
        android:textColor="#FFFFFF" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_already_have_account"
            android:inputType="text"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/text_login"
            android:inputType="text"/>
    </LinearLayout>

</LinearLayout>