<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:padding="10dp"
    tools:context=".LoginActivity">
    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/text_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="open-ims.onefive"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/partial_my_text_box"
         />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="@string/text_remember_me"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_shape_capsule"
        android:padding="20dp"
        android:text="@string/text_login"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_shape_capsule"
        android:padding="20dp"
        android:text="@string/text_sign_up"
        android:textColor="#FFFFFF" />

</LinearLayout>